--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:label="bootes_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyA7LAqGtPhUKiwpHw-xcElgkwogIVHNMKY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
